5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4515/executions/1643_869.log
== TEST (2019-04-15 13:26:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem(valorcompra-(valorcompra*0.05))
else
   mensagem(valorcompra)
	
print(mensagem) 	
	

-- ERROR:
File "XXXX", line 8
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:26:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem(valorcompra-(valorcompra*0.05))
else:
   mensagem(valorcompra)
	
print(mensagem) 	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem(valorcompra-(valorcompra*0.05))
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:27:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (valorcompra-(valorcompra*0.05))
else:
   mensagem = (valorcompra)
	
print(mensagem) 	
	

-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:27:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (valorcompra-(valorcompra*0.05))
else:
   mensagem = (valorcompra)
	
print(mensagem) 	
	

-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:27:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (valorcompra-(valorcompra*0.05))
else:
   mensagem = (valorcompra)
	
print(mensagem) 	
	

-- EXECUTION TIME:
0.159094
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:27:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (valorcompra-(valorcompra*0.05))
else:
   mensagem = (valorcompra)
	
print(mensagem) 	
	

-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:29:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (valorcompra-(valorcompra*0.05))
else:
   mensagem = (valorcompra)
	
print(round(mensagem,2) 	
	

-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:29:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (valorcompra-(valorcompra*0.05))
else:
   mensagem = (round(valorcompra,2)
	
print(mensagem) 	
	

-- ERROR:
File "XXXX", line 11
    print(mensagem) 	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:29:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (valorcompra-(valorcompra*0.05))
else:
   mensagem = (round(valorcompra,2))
	
print(mensagem) 	
	

-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:30:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (round(valorcompra-(valorcompra*0.05),2))
else:
   mensagem = (round(valorcompra,2))
	
print(mensagem) 	
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (round(valorcompra-(valorcompra*0.05),2))
else:
   mensagem = (round(valorcompra,2))
	
print(mensagem) 	
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (round(valorcompra-(valorcompra*0.05),2))
else:
   mensagem = (round(valorcompra,2))
	
print(mensagem) 	
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (round(valorcompra-(valorcompra*0.05),2))
else:
   mensagem = (round(valorcompra,2))
	
print(mensagem) 	
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (round(valorcompra-(valorcompra*0.05),2))
else:
   mensagem = (round(valorcompra,2))
	
print(mensagem) 	
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	mensagem = (round(valorcompra-(valorcompra*0.05),2))
else:
   mensagem = (round(valorcompra,2))
	
print(mensagem) 	
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:41:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	valorpagar = (valorcompra-(valorcompra*0.05),2)
else:
   valorpagar = (valorcompra,2)
	
print(round(valorpagar,2)) 	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(valorpagar,2)) 	
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:43:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	valorpagar = (valorcompra-(valorcompra*0.05))
else:
   valorpagar = (valorcompra)
	
print(round(valorpagar,2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:43:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	valorpagar = (valorcompra-(valorcompra*0.05))
else:
   valorpagar = (valorcompra)
	
print(round(valorpagar,2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:43:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	valorpagar = (valorcompra-(valorcompra*0.05))
else:
   valorpagar = (valorcompra)
	
print(round(valorpagar,2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:43:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	valorpagar = (valorcompra-(valorcompra*0.05))
else:
   valorpagar = (valorcompra)
	
print(round(valorpagar,2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:43:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	valorpagar = (valorcompra-(valorcompra*0.05))
else:
   valorpagar = (valorcompra)
	
print(round(valorpagar,2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:44:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valorcompra = float(input("Valor da compra :"))

if(valorcompra >= 200):
	valorpagar = (valorcompra-(valorcompra*0.05))
else:
   valorpagar = (valorcompra)
	
print(round(valorpagar,2))
	

-- EXECUTION TIME:
0.165062
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
